# reinforcment-learning

./: Procfile  pyproject.toml  requirements.txt  setup.sh
scripts/: multi_armed_bandits.py
