[tool.poetry]
name = "reinforcment-learning"
version = "0.1.0"
description = ""
authors = ["Richard Cooper"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.56.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
